# Epstein-graphrag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.vllm  Dockerfile.worker  README.md  pyproject.toml
.claude/: settings.local.json
data/: alias_table.json  manifest.json  manifest_batch.json  manifest_test.json  ocr_quality_report.json  ocr_quality_report_final.json  schema_alerts.jsonl
deploy/: split_manifest.py  vast-ai-template.sh  vllm-entrypoint.sh  worker-entrypoint.sh
scripts/: multi_machine_ocr.py  start_server_mac.sh  start_server_rtx.sh  volunteer.sh
src/epstein_graphrag/: __init__.py  cli.py  config.py
src/epstein_graphrag/classify/: __init__.py  classifier.py
src/epstein_graphrag/embeddings/: __init__.py  embed.py
src/epstein_graphrag/extract/: __init__.py  entity_extractor.py  multi_provider_extractor.py  prompts.py  schema_validator.py
src/epstein_graphrag/graph/: __init__.py  dedup.py  ingest.py  schema.py
src/epstein_graphrag/ocr/: __init__.py  deepseek_ocr.py  duplicate_detector.py  fast_ocr_runner.py  fast_triage.py  forensic_marker_processor.py  forensic_prompts.py  gemini_ocr.py  lmstudio_ocr.py  marker_pipeline.py  marker_pipeline_ollama.py  ollama_ocr.py  quality_check.py  redaction_merger.py  vllm_ocr.py
src/epstein_graphrag/output/: __init__.py  evidence_chain.py  network_map.py  timeline.py
tests/: __init__.py  test_classifier.py  test_dedup.py  test_embed.py  test_entity_extractor.py  test_ingest.py  test_ocr.py  test_pattern_detector.py  test_query_engine.py  test_schema.py
(+6 files in other folders)
