[project]
name = "epstein-graphrag"
version = "0.1.0"
description = "Hybrid GraphRAG system for analyzing Epstein case evidence"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.20",
    "marker-pdf>=1.0",
    "google-generativeai>=0.5",
    "ollama>=0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "click>=8.0",
    "tqdm>=4.0",
    "Pillow>=10.0",
    "pdf2image>=1.16",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
egr = "epstein_graphrag.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
